src/test/deca/syntax/valid/synt/class_decl_method_before_field.deca
/*
    Description : Test de la possibilité de définir un attribut de classe après une méthode

    Résultat : OK
*/
class A{
    void m(){

    }
    int x;
}
{}
